# Advanced-MCP-Server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: docker-compose.yml
requirements/: base.txt
src/: config.py  server.py
src/storage/: database.py  models.py
src/tools/: __init__.py  advanced.py  calculator.py  notes.py  tasks.py
src/utils/: embeddings.py  logging_config.py  middleware.py  validators.py
