[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advanced-mcp-server"
version = "0.1.0"
description = "An enterprise-grade MCP (Model Context Protocol) server with advanced task management, semantic search, data export, and production-ready features."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Farshad", github = "ieeexplorer" }
]
keywords = ["mcp", "model-context-protocol", "ai", "server", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
advanced-mcp-server = "src.server:main"

[project.urls]
Homepage = "https://github.com/ieeexplorer/Advanced-MCP-Server"
Repository = "https://github.com/ieeexplorer/Advanced-MCP-Server"
Issues = "https://github.com/ieeexplorer/Advanced-MCP-Server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
]
